--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>EU CAUE AMO MINHA MULHER</h1>
-    <img src="nois.PNG">
+    <h1>Matheus é um viado</h1>
 </body>
 </html>
