--- a/index.html
+++ b/index.html
@@ -1217,7 +1217,7 @@
             
             <!-- Mobile menu button -->
             <div class="navbar-mobile-menu">
-              <button id="menu-toggle" class="text-white p-2 hover:bg-white/10 rounded-full transition-all">
+             <button id="menu-toggle" class="text-white p-2 hover:bg-white/10 rounded-full transition-all" style="background-color: #1b202f;border: none;opacity: 96%;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                   <line x1="3" y1="12" x2="21" y2="12"></line>
                   <line x1="3" y1="6" x2="21" y2="6"></line>
