--- a/index.html
+++ b/index.html
@@ -1276,8 +1276,7 @@
               <div class="flex flex-col sm:flex-row gap-4 justify-center mb-10" style="
               display: block;
           ">
-                <button id="hero-primary-btn" class="button-primary text-lg h-14 gap-2">
-                  Quero Lucrar! 
+<button id="hero-primary-btn" class="button-primary text-lg h-14 gap-2" style="margin-bottom: 10px;">                  Quero Lucrar! 
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"></path>
                   </svg>
